--- a/src/AppleStore/Views/Admin/Main.cshtml
+++ b/src/AppleStore/Views/Admin/Main.cshtml
@@ -5,21 +5,21 @@
     
 }
 @section Styles{
-    <link rel="stylesheet" asp-href-include="~/css/Admin/*.css" />
+    
 }
 <div class="main">
         <div class="container admin-top-links">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 button-column">
-                    <a href="#" class="btn btn-block btn-default btn-lg active">СПИСОК ТОВАРОВ</a>
+                    <a href="#" class="btn btn-block btn-default btn-lg active">СПИСОК ЗАКАЗОВ</a>
                 </div><!--end div ordering-list-button-column-->
 
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 button-column">
-                    <a href="#" class="btn btn-block btn-primary  btn-lg">КАТАЛОГ ТОВАРОВ</a>
+                    <a href="/Admin/GoodsMain" class="btn btn-block btn-primary  btn-lg">КАТАЛОГ ТОВАРОВ</a>
                 </div><!--end div ordering-list-button-column-->
                
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 button-column">
-                    <a href="#" class="btn btn-block btn-primary  btn-lg">СПИСОК ПОЛЬЗОВАТЕЛЕЙ</a>
+                    <a href="/Admin/UsersMain" class="btn btn-block btn-primary  btn-lg">СПИСОК ПОЛЬЗОВАТЕЛЕЙ</a>
                 </div><!--end div ordering-list-button-column-->
 
             </div><!--end div row-->
@@ -53,11 +53,11 @@
                                 <td>{{order.Delivery}}</td><!--Доставка-->
                                 <td>{{users[$index].Address}}</td><!--Адрес доставки-->
 
-                                <td ng-if='order.Status == "New         "'>
+                                <td ng-if='order.Status == "New         " || order.Status == "New"'>
                                     <a href="/Admin/OrderPage/{{order.OrderNumber}}" ng-click="orderclick(order.Status,order.OrdersID)" 
                                        target="_blank" class="btn btn-success">Новый</a>
                                 </td><!--Статус (Новый)-->
-                                <td ng-if="order.Status == 'InProgress  '">
+                                <td ng-if="order.Status == 'InProgress  ' || order.Status == 'InProgress'">
                                     <a  href="/Admin/OrderPage/{{order.OrderNumber}}" ng-click="orderclick(order.Status,order.OrdersID)" 
                                        target="_blank" class="btn btn-warning">В обработке</a>
                                 </td><!--Статус (В обработке)-->
