--- a/src/AppleStore/Views/Admin/OrderPage.cshtml
+++ b/src/AppleStore/Views/Admin/OrderPage.cshtml
@@ -1,61 +1,161 @@
-@model Store.Entity.Order.Orders
-
+﻿@model Store.Entity.Order.Orders
+@using System.Globalization
 @{
-    ViewData["Title"] = "OrderPage";
+    ViewData["Title"] = "Order Page";
     Layout = "_AdminLayout";
+    ApplicationUser user = ViewData["User"] as ApplicationUser;
+    CultureInfo info = new CultureInfo("uk-UA");
+    var url = "/Admin/OrderPage/" + Model.OrderNumber;
 }
-@{ApplicationUser user = ViewData["User"] as ApplicationUser;
-<h2>OrderPage</h2>
-
-<div>
-    <h4>Orders</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Date)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Date)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Delivery)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Delivery)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.OrderNumber)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.OrderNumber)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Payment)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Payment)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Sum)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Sum)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.UserID)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.UserID)
-        </dd>
-    </dl>
+@section Styles{
+    
+}
+<div style="padding-top: 30px; padding-bottom: 50px; margin-bottom: 50px;">
+    <h2 class="text-center" style="margin-left: 50px; margin-top: 30px;">Страница заказа</h2><br />
+    <div>
+        <h4 style="margin-left:45%">Заказ No. @Model.OrderNumber</h4>
+        <hr />
+        <div class="container">
+            <div class="row">
+                <div class="col-xs--offset-1 col-xs-10">
+                    <div class="text-center">
+                        <table class="table table-hover">
+                            <tbody>
+                                <tr>
+                                    <td><b>Дата</b></td>
+                                    <td>@DateTime.Parse(Model.Date,info).ToString("dd.MM.yyyy hh:mm")</td>
+                                </tr>
+                                <tr>
+                                    <td><b>Доставка</b></td>
+                                    <td>@Model.Delivery</td>
+                                </tr>
+                                <tr>
+                                    <td><b>Оплата</b></td>
+                                    <td>@Model.Payment</td>
+                                </tr>
+                                <tr>
+                                    <td><b>Статус</b></td>
+                                    <td id="status-td">
+                                        @if (Model.Status == "InProgress  ")
+                                        {
+                                            <span>В обработке</span>
+                                        }
+                                        else if (Model.Status == "Executed    ")
+                                        {
+                                            <span>Отработан</span>
+                                        }
+                                        else if (Model.Status == "Removed     ")
+                                        {
+                                            <span>Удален</span>
+                                        }
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><b>Сумма в долларах</b></td>
+                                    <td>@Model.Sum &nbsp; $</td>
+                                </tr>
+                                <tr>
+                                    <td><b>Сумма в гривнах</b></td>
+                                    <td>{{currency * @Model.Sum.ToString().Replace(",",".") | number:2}} &nbsp; &#8372;</td>
+                                </tr>
+                                <tr style="background-color: lightgray;">
+                                    <td><h4>Заказчик</h4></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td><b>Имя</b></td>
+                                    <td>@user.UserName</td>
+                                </tr>
+                                <tr>
+                                    <td><b>Телефон</b></td>
+                                    <td>@user.PhoneNumber</td>
+                                </tr>
+                                <tr>
+                                    <td><b>Email</b></td>
+                                    <td>@user.Email</td>
+                                </tr>
+                                <tr>
+                                    <td><b>Город</b></td>
+                                    <td>@user.City</td>
+                                </tr>
+                                <tr>
+                                    <td><b>Адрес</b></td>
+                                    <td>@user.Address</td>
+                                </tr>
+                                <tr style="background-color: lightgray;">
+                                    <td><h4>Товары</h4></td>
+                                    <td>
+                                </tr>
+                                @{
+                                    foreach (var item in Model.AppleOrders)
+                                    {
+                                        <tr>
+                                            <td><b>Модель</b></td>
+                                            <td><a href="/@item.Apple.Url/@item.AppleID">@item.Apple.Model</a></td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>Цена в долларах</b></td>
+                                            <td>@item.Apple.Price &nbsp; $</td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>Цена в гривнах</b></td>
+                                            <td>{{currency * @item.Apple.Price.ToString().Replace(",", ".") | number:2}} &nbsp; &#8372;</td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>Количество</b></td>
+                                            <td>@item.Count</td>
+                                        </tr>
+                                        
+                                        <tr style="background-color: lightgray;">
+                                            <td>&nbsp;</td>
+                                            <td>&nbsp;</td>
+                                        </tr>
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<input type="hidden" id="orderid" name="OrderID" value="@Model.OrdersID"/>
+    <p style="margin-bottom: 50px;">
+        <div class="col-xs-offset-1 col-xs-8">
+            <div class="col-xs-2">
+                @if (Model.Status != "Removed     ")
+                {
+                    <input type="button" class="btn btn-danger remove-btn" ng-click="removeorder()" 
+                           value="Удальть заказ" />
+                }
+                else
+                {
+                    <input type="button" class="btn btn-danger disabled" value="Удальть заказ" />
+                }
+            </div>
+            <div class="col-xs-4">
+                <a class="btn btn-info" asp-action="EditUser" 
+                   style="height: 35px; font-size: 15px;" asp-route-id="@Model.UserID"
+                   asp-route-returnurl="@url">Изменить данные пользователя</a>
+            </div>
+            <div class="col-xs-3">
+                @if (Model.Status != "Executed    ")
+                {
+                    <input type="button" class="btn btn-info execute-btn" ng-click="executeorder()" 
+                           value="Поставить в 'Отработан'" />
+                }
+                else
+                {
+                    <input type="button" class="btn btn-info disabled" value="Поставить в 'Отработан'" />
+                }
+            </div>
+            <div class="col-xs-2">
+                <a class="btn btn-default" asp-action="ChangeOrder" style="height: 35px; font-size: 15px;"
+                    asp-route-ordernumber="@Model.OrderNumber" asp-route-returnurl="@url">Изменить</a>
+            </div>
+        </div>
+    </p>
 </div>
-<p>
-    <a asp-action="Edit" asp-route-id="@Model.OrdersID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</p>
+@section Scripts{
+    <script type="text/javascript" asp-src-include="~/js/Admin/appOrderPage/*.js"></script>
+}
