--- a/src/AppleStore/Views/Shared/_AdminLayout.cshtml
+++ b/src/AppleStore/Views/Shared/_AdminLayout.cshtml
@@ -1,8 +1,11 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" asp-href-include="~/css/frameworks/*.css" />
+    <link rel="stylesheet" asp-href-include="~/css/Admin/*.css" />
     @RenderSection("Styles",required: false)
 </head>
 <body ng-app="Admin" ng-controller="AdminCtrl">
