--- a/src/AppleStore/Views/TV/TVItem.ru-RU.cshtml
+++ b/src/AppleStore/Views/TV/TVItem.ru-RU.cshtml
@@ -71,7 +71,10 @@
                 <div class="col-xs-12">
                     <div class="ident"></div>
                     <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
-                        <div class="col-xs-12 price">
+                        <div class="col-xs-12 price" ng-if="currencyvalue == 'USD'">
+                            <span>{{item.Price}}</span> $
+                        </div><!--end div price-->
+                        <div class="col-xs-12 price" ng-if="currencyvalue == 'UAH'">
                             <span>{{item.Price * currency | number:2}}</span> &#8372;
                         </div><!--end div price-->
                         <div class="col-xs-12 cart-button-column">
@@ -167,8 +170,11 @@
                 <div class="col-xs-12">
                     <div class="ident col-xs-12"></div>
                     <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
-                        <div class="col-xs-12 price">
-                            {{item.Price * currency | number:2}} &#8372;
+                        <div class="col-xs-12 price" ng-if="currencyvalue == 'USD'">
+                            <span>{{item.Price}}</span> $
+                        </div><!--end div price-->
+                        <div class="col-xs-12 price" ng-if="currencyvalue == 'UAH'">
+                            <span>{{item.Price * currency | number:2}}</span> &#8372;
                         </div><!--end div price-->
                         <div class="col-xs-12 cart-button-column">
                             <button type="button" title="Дбавить {{item.Model}} в корзину"
