--- a/src/AppleStore/Views/Admin/ChangeElement.cshtml
+++ b/src/AppleStore/Views/Admin/ChangeElement.cshtml
@@ -6,4 +6,6 @@
     Change
 </div>
 
-
+@section Scripts{
+    <script type="text/javascript" asp-src-include="~/js/Admin/Goods/appChangeGoods/*.js"></script>
+}
