--- a/src/AppleStore/Views/Admin/RemoveElement.cshtml
+++ b/src/AppleStore/Views/Admin/RemoveElement.cshtml
@@ -5,3 +5,7 @@
 <div>
     Remove
 </div>
+
+@section Scripts{
+    <script type="text/javascript" asp-src-include="~/js/Admin/Goods/appRemoveGoods/*.js"></script>
+}
