--- a/src/AppleStore/Views/Admin/AddElement.cshtml
+++ b/src/AppleStore/Views/Admin/AddElement.cshtml
@@ -1,4 +1,174 @@
 ﻿@{ 
     Layout = "_AdminLayout";
-    ViewData["Title"] = "Add element";
+    ViewData["Title"] = "Добавление товара";
 }
+@section Styles{
+<link href="~/css/admin/addgoods/goods.css" rel="stylesheet" />
+}
+
+    <div class="text-center div-main" > 
+        <div class="col-xs-12 buttons-div" > 
+            <div class="col-xs-4" > 
+                <span > Выбрать категорию &nbsp;&nbsp;</span >
+                <div class="btn-group drpdwn" > 
+                    <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" 
+                        aria-haspopup="true" aria-expanded="false" > 
+                        <span id="drpdwn-text" > Watch</span > &nbsp;&nbsp; 
+                        <span class="caret" > </span > 
+                    </button > 
+                    <ul class="dropdown-menu" > 
+                        <li ng-repeat="category in categories" > 
+                            <a href="#" ng-click="selectcategory(category.CategoriesID)" >{{category.CategoryName}}</a >
+                        </li > 
+                    </ul > 
+                </div > 
+            </div > 
+        </div >
+
+        <div class="col-xs-offset-1 col-xs-10 images-did-main">
+            <div class="container image-container">
+                <div class="row">
+                    <div class="col-xs-4 select-image">
+                        <div class="col-xs-12">
+                            <label class="btn btn-default label-choose-image" for="fileToUpload">
+                                Выберете файлы для загрузки
+                            </label><br />
+                            <input class="fupload" ng-click="uploadButtonClick()" type="file" 
+                                   ng-model-instant id="fileToUpload" multiple
+                                   onchange="angular.element(this).scope().setFiles(this)" accept="image/*" />
+                        </div>
+                        <div class="col-xs-12">
+                            <div id="dropbox" class="dropbox" ng-class="dropClass"><span>{{dropText}}</span></div>
+                        </div>
+                        <div class="col-xs-12" ng-show="files.length">
+                            <div ng-show="progressVisible">
+                                <div class="progress" style="width: 350px;">
+                                    <div class="progress-bar progress-bar-info progress-bar-striped text-center" 
+                                         role="progressbar" aria-valuemin="0" aria-valuenow="{{progress}}" 
+                                         aria-valuemax="100" style="width: {{progress}}%">
+                                        {{progress}} &nbsp; %
+                                    </div>
+                                </div>
+                            </div>
+                                <button class="upload-button btn btn-default" type="button" ng-click="uploadFile()">
+                                    Сохранить изображения
+                                </button>
+                            </div>
+                    </div><!--end div col-4 selectImage-->
+
+                    <div class="col-xs-8 image-preview">
+                        <div class="col-xs-7">
+                            <div class="col-xs-3 img-main" ng-repeat="img in images" style="width: 100px; height: 100px">
+                                <div class="divimg text-center">
+                                    <span class="imghelper"></span>
+                                    <img ng-src="{{img}}" class="imgs" />
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-5">
+                            <div ng-repeat="file in files.slice(0)">
+                                <span>{{file.webkitRelativePath || file.name}}</span>
+                                (<span ng-switch="file.size > 1024*1024">
+                                    <span ng-switch-when="true">{{file.size / 1024 / 1024 | number:2}} MB</span>
+                                    <span ng-switch-default>{{file.size / 1024 | number:2}} kB</span>
+                                </span>)
+                            </div>
+                        </div>
+                    </div><!--end div col-8 imagePreview-->
+                </div><!--end div row-->
+            </div><!--end div container-->
+            
+
+          
+        </div>
+
+        <div class="col-xs-offset-1 co-xs-8 col-xs-offset-2 tbl" >
+            <div class="col-xs-11 tbl-inside">
+                <table class="table table-hover">
+                    <tbody>
+                        <tr class="form-group">
+                            <td class="form-title" style="min-width: 200px;">Model</td>
+                            <td>
+                                <input type="text" class="form-control" name="Model" ng-model="apple.Model" placeholder="Model" />
+                            </td>
+                        </tr>
+                        <tr class="form-group">
+                            <td class="form-title" style="min-width: 200px;">Construction</td>
+                            <td>
+                                <input type="text" class="form-control" ng-model="apple.Construction" placeholder="Construction" />
+                            </td>
+                        </tr>
+                        <tr class="form-group">
+                            <td class="form-title" style="min-width: 200px;">Name</td>
+                            <td>
+                                <input type="text" name="Name" class="form-control" ng-model="apple.Name" placeholder="Name" />
+                            </td>
+                        </tr>
+                        <tr class="form-group">
+                            <td class="form-title" style="min-width: 200px;">Price</td>
+                            <td>
+                                <input type="text" name="Price" class="form-control" ng-model="apple.Price" placeholder="Price" />
+                            </td>
+                        </tr>
+                        <tr class="form-group">
+                            <td class="form-title" style="min-width: 200px;">Subcategory</td>
+                            <td>
+                                <input type="text" name="Subcategory" class="form-control" ng-model="apple.Subcategory" placeholder="Subcategory" />
+                            </td>
+                        </tr>
+                        <tr class="form-group">
+                            <td class="form-title" style="min-width: 200px;">Type</td>
+                            <td>
+                                <input type="text" name="Type" class="form-control" ng-model="apple.Type" placeholder="Type" />
+                            </td>
+                        </tr>
+                        <tr class="form-group">
+                            <td class="form-title" style="min-width: 200px;">Url</td>
+                            <td>
+                                <input type="text" name="Url" class="form-control" ng-model="apple.Url" placeholder="Url" />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                        </tr>
+                        <tr ng-repeat="detail in apple.ProductDetails">
+                            <td>
+                                <input name="search" autocomplete="off" id="search" type="text" placeholder="Detail Name" 
+                                       ng-model="detail.DetailNames.Name"
+                                       typeahead="Name for Name in detailnames | filter:$viewValue | limitTo:6"
+                                       class="search-input form-control" value="{{detail.DetailNames.Name}}" /><!--end input search-->
+                            </td>
+                            <td class="input-group">
+                                <input type="text" class="form-control search-input" name="srch" autocomplete="off"
+                                       placeholder="{{detail.DetailNames.Name}}" ng-model="detail.Value" 
+                                       typeahead="value for value in detailvalues | filter:$viewValue | limitTo:6"/>
+                                <span class="input-group-btn">
+                                    <button class="btn btn-danger" style="height: 34px;" type="button" ng-click="removedetail($index)">
+                                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                    </button>
+                                </span>
+                            </td>
+                        </tr>
+                        <tr class="adddetail-tr">
+                            <td>
+                                Добавить поле
+                            </td>
+                            <td>
+                                <button class="btn btn-success addfield-button" ng-click="addfield()">
+                                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="text-center div-save">
+                    <button class="btn btn-info" ng-click="save()">Создать</button>
+                </div>
+            </div>
+        </div >
+     </div>
+ @section Scripts {
+        <script type="text/javascript" asp-src-include="~/js/Admin/Goods/appAddGoods/*.js"></script>;
+    }
