--- a/src/AppleStore/Views/Admin/ChangeOrder.cshtml
+++ b/src/AppleStore/Views/Admin/ChangeOrder.cshtml
@@ -1,6 +1,7 @@
 ﻿@model String
 @{ 
     Layout = "_AdminLayout";
+    ViewData["Title"] = "Изменить заказ";
 }
 <div style="margin-bottom: 50px; padding-bottom: 50px;" class="text-center">
     <div class="col-xs-12">
