--- a/src/AppleStore/Views/Admin/EditOrder.cshtml
+++ b/src/AppleStore/Views/Admin/EditOrder.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Store.Entity.Order.Orders
 @using System.Globalization
 @{
-    ViewData["Title"] = "Order Page";
+    ViewData["Title"] = "Страница заказов";
     Layout = "_AdminLayout";
     ApplicationUser user = ViewData["User"] as ApplicationUser;
     CultureInfo info = new CultureInfo("uk-UA");
