--- a/src/AppleStore/Views/Admin/ChangeElement.cshtml
+++ b/src/AppleStore/Views/Admin/ChangeElement.cshtml
@@ -1,10 +1,141 @@
 ﻿@{
     Layout = "_AdminLayout";
-    ViewData["Title"] = "Change element";
+    ViewData["Title"] = "Изменить товар";
 }
-<div>
-    Change
+@section Styles{
+    <style>
+.change-main{
+    padding-bottom: 100px;
+    margin-top: 50px;
+    min-height: 95vh;
+}
+.element-title{
+    padding-bottom: 50px;
+    font-size: 18px;
+}
+.close-classic{
+  color: #777;
+  font: 14px/100% arial, sans-serif;
+  position: absolute;
+  right: 5px;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #fff;
+  top: 5px;
+}
+.close-classic:after {
+  content: 'X';
+}
+.url-alert{
+    position: fixed;
+    width: 400px;
+    left: 50%;
+    margin-left: -200px;
+    right: auto;
+    display: none;
+    text-align: center;
+    z-index: 3;
+}
+    </style>
+}
+<div class="alert alert-info url-alert" role="alert">
+    <a href="#" class="close-classic" ng-click="closepopup()"></a>
+    <span>Товар успешно изменен</span><br />
+    <span><a href="#" class="total-url">Просмотреть товар</a></span>
 </div>
+
+<div class="col-xs-offset-1 col-xs-10 change-main">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 text-center">
+                <div ng-if="elementtocange == false">
+                    <div class="col-xs-offset-1 col-xs-10">
+                        <h3>Отсутствует товар с заданным ключем</h3><br /><br />
+                        <h4>Пожалуйста повторите попытку</h4>
+                    </div>
+                </div><!--end div elementtocange == false-->
+
+                <div ng-if="elementtocange == true">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xs-12 text-center element-title">
+                                <span>ID товара - {{apple.AppleID}}</span>
+                            </div>
+                            <table class="table table-hover">
+                                <tbody>
+                                    <tr>
+                                        <td>Модель</td>
+                                        <td>
+                                            <input type="text" class="search-input form-control" ng-view="apple.Model"
+                                                   value="{{apple.Model}}" ng-model="apple.Model" autocomplete="off"/>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Конструкция</td>
+                                        <td>
+                                            <input type="text" class="search-input form-control" ng-view="apple.Construction"
+                                                   value="{{apple.Construction}}" ng-model="apple.Construction" autocomplete="off"/>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Имя</td>
+                                        <td>
+                                            <input type="text" class="search-input form-control" ng-model="apple.Name" 
+                                                   ng-view="apple.Name" value="{{apple.Name}}" autocomplete="off"/>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Цена</td>
+                                        <td>
+                                            <input type="text" class="search-input form-control" ng-view="apple.Price"
+                                                   value="{{apple.Price}}" autocomplete="off" ng-model="apple.Price"/>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Подкатегория</td>
+                                        <td>
+                                            <input type="text" class="search-input form-control" ng-view="apple.Subcategory"
+                                                   value="{{apple.Subcategory}}" ng-model="apple.Subcategory" autocomplete="off" />
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Тип</td>
+                                        <td>
+                                            <input type="text" class="search-input form-control" ng-view="apple.Type"
+                                                   value="{{apple.Type}}" autocomplete="off" ng-model="apple.Type" />
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Url</td>
+                                        <td>
+                                            <input type="text" class="search-input form-control" ng-view="apple.Url"
+                                                   value="{{apple.Url}}" autocomplete="off" ng-model="apple.Url"/>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>&nbsp;</td>
+                                        <td>&nbsp;</td>
+                                    </tr>
+                                    <tr ng-repeat="detail in apple.ProductDetails">
+                                        <td>{{detail.DetailNames.Name}}</td>
+                                        <td>
+                                            <input type="text" class="search-input form-control" ng-view="detail.Value"
+                                                   value="{{detail.Value}}" autocomplete="off" ng-model="detail.Value" />
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div><!--end div elementtocange == true-->
+            </div>
+        </div><!--end div row-->
+    </div><!--end div container-->
+    <div class="col-xs-12 text-center">
+        <div class="col-xs-offset-4 col-xs-4">
+            <button class="btn btn-info" ng-click="savechanges()">Сохранить изменения</button>
+        </div>
+    </div>
+</div><!--end div main-->
 
 @section Scripts{
     <script type="text/javascript" asp-src-include="~/js/Admin/Goods/appChangeGoods/*.js"></script>
