--- a/src/AppleStore/Views/Shared/Error.cshtml
+++ b/src/AppleStore/Views/Shared/Error.cshtml
@@ -1,6 +1,22 @@
-﻿@{
+﻿@model String
+@{
+    Layout = "_HomeLayout";
     ViewData["Title"] = "Error";
+    String message = Model == null ? "" : Model;
 }
-
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-offset-2 col-xs-8">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-offset-1 col-xs-10 text-center">
+                        <span>@message</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
