--- a/src/AppleStore/Views/Home/About.cshtml
+++ b/src/AppleStore/Views/Home/About.cshtml
@@ -1,7 +1,46 @@
 ﻿@{
+    Layout = "_HomeLayout";
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
+@section Styles{
+<style>
+    .info-main {
+        min-height: 95vh;
+        margin-top: 50px;
+    }
+    .txt{
+        font-size: 20px;
+    }
+</style>
+}
+<div class="container info-main">
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-offset-1 col-xs-10">
+                        <address ng-if="language == 'EN'" class="txt">
+                            This website is developed in ASP.NET MVC 6<br />
+                            The main idea of this project is<br />
+                            Write diploma for <a href="http://itstep.org/">IT Step Academy</a><br />
+                        </address>
+                        <address ng-if="language == 'RU'"  class="txt">
+                            Этот вебсайт разработан на технологии ASP.NET MVC 6<br />
+                            Главной идеей для донного проекта является<br />
+                            Разработка дипломного проекта для <a href="http://itstep.org/">КА ШАГ</a><br />
+                        </address>
+                    </div>
+                </div>
+            </div>
+            <br /><br />
+        </div>
+    </div>
+</div>
 
-<p>Use this area to provide additional information.</p>
+@section Scripts{
+    <script type="text/javascript" asp-src-include="~/js/Home/Info/app/*.js"></script>
+    <script>
+        function Load() { }
+        function FilterPosition() { }
+    </script>
+}
