--- a/src/AppleStore/Views/Shared/_HomeLayout.cshtml
+++ b/src/AppleStore/Views/Shared/_HomeLayout.cshtml
@@ -27,6 +27,8 @@
                 <div class="round">
                 </div><!--end div round-->
             </div><!--end div pre-loader-->
+            <a href="#" class="close" ></a>
+
             <div class="close-popup-authorization"></div>
             <div class="popup">
             </div>
@@ -104,7 +106,7 @@
                         col-md-offset-6 col-md-6 col-lg-offset-8 col-lg-4 info-panel hidden">
                     <div class="row">
                         <div class="col-xs-3">
-                            <a href="/Home/Pay">
+                            <a href="/Home/Payment">
                                 <span class="info-text-link">How to pay</span>
                             </a><!--end a how to pay-->
                         </div><!--end div col-xs-->
@@ -192,15 +194,80 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 bottom bottom-navbar">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="">
+                        
+                        <div class="container bottom-footer-top">
+                            <div class="row">
+                                <div class="col-xs-offset-1 col-xs-11">
+                                    <br /><br />
+                                    <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
+                                        <a href="/Home/Index" class="logo-bottom" title="Home">
+                                            <img src="~/images/HomeLayout/logo_footer.png" />
+                                        </a><!--end a class=logo-->
+                                    </div>
+                                    <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12 phones">
+                                        <b>
+                                            <abbr title="Phone" ng-if="language == 'EN'">
+                                                Ph:
+                                            </abbr>
+                                            <abbr title="Телефон" ng-if="language == 'RU'">
+                                                Т.
+                                            </abbr>
+                                            &nbsp;(+380) 93-497-0480
+                                        </b>
+                                    </div>
 
+                                </div><!--end div bottom-footer-top-->
+                            </div>
                         </div>
+                        
+                        <div class="container bottom-footer-links-container">
+                            <div class="row">
+                                <div class="col-xs-offset-1 col-xs-11">
+                                    <div class="col-lg-5 col-md-6 col-sm-6 col-xs-6 bottom-footer-columns">
+                                        <a href="/Mac/Index" class="bottom-footer-links"><b>Mac</b></a>
+                                    </div>
+                                    <div class="col-lg-5 col-md-6 col-sm-6 col-xs-6 bottom-footer-columns">
+                                        <a href="/iPhone/Index" class="bottom-footer-links"><b>iPhone</b></a>
+                                    </div>
+                                    <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 bottom-footer-columns">
+                                        <a href="/Watch/Index" class="bottom-footer-links"><b>Watch</b></a>
+                                    </div>
+                                    <div class="col-lg-5 col-md-6 col-sm-6 col-xs-6 bottom-footer-columns">
+                                        <a href="/iPad/Index" class="bottom-footer-links"><b>iPad</b></a>
+                                    </div>
+                                    <div class="col-lg-5 col-md-6 col-sm-6 col-xs-6 bottom-footer-columns">
+                                        <a href="/iPod/Index" class="bottom-footer-links"><b>iPod</b></a>
+                                    </div>
+                                    <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 bottom-footer-columns">
+                                        <a href="/TV/Index" class="bottom-footer-links"><b>TV</b></a>
+                                    </div>
+                                    <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 bottom-footer-columns">
+                                        <a href="/Accessories/Index" class="bottom-footer-links"><b>Accessories</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div><!--end div footer links-->
                     </div><!--end div row-->
                 </div><!--end div container-->
             </div><!--end div bottom navbar-->
-
         </div><!--end div main-->
     </div><!--end div ng-controller-->
+    <div class="bottom-navbar-bottom-links">
+        <div class="col-xs-12 bottom-info">
+            <div class="col-xs-offset-1 col-xs-5">
+                Copiright &nbsp; &copy; &nbsp; 2016, All rights reserved
+            </div>
+            <div class="col-xs-offset-1 col-xs-4">
+                <a href="#" class="social-networks-bottom">
+                    <img src="~/images/HomeLayout/Facebook_login.png" />
+                </a>
+                
+                <a href="#" class="social-networks-bottom">
+                    <img src="~/images/HomeLayout/Google-login.png" />
+                </a>
+            </div>
+        </div>
+    </div> 
 </body>
 </html>
 <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
