--- a/src/AppleStore/wwwroot/css/iPhone/item.css
+++ b/src/AppleStore/wwwroot/css/iPhone/item.css
@@ -103,7 +103,7 @@
 @media (min-width: 1200px){
     
 }
-@media (min-width: 1024px) and (max-wodth: 1200px){
+@media (min-width: 1024px) and (max-width: 1200px){
     
 }
 @media (min-width: 768px) and (max-width: 1024px) {
